[gd_scene load_steps=2 format=3 uid="uid://d1o8v6bnqmkyy"]

[ext_resource type="Script" path="res://scenes/stage_select.gd" id="1_m2qah"]

[node name="StageSellect" type="GridContainer"]
offset_right = 54.0
offset_bottom = 50.0
scale = Vector2(2, 2)
script = ExtResource("1_m2qah")

[node name="Level1" type="LinkButton" parent="."]
layout_mode = 2
text = "Level 1"

[node name="Level2" type="LinkButton" parent="."]
layout_mode = 2
text = "Level 2"

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
